--- a/src/shared/Layout/Content/Card/CardContent/cardcontent.css
+++ b/src/shared/Layout/Content/Card/CardContent/cardcontent.css
@@ -26,8 +26,9 @@
   margin: 0 7px 0 0;  
   width: 20px;
   height: 20px;
-  border-radius: 50%;
-  font-size: 6px;
+  border-radius: 50%;  
+  font-size: 10px;
+  text-align: center;
   background-color: var(--grey_D9);
 }
 
