--- a/src/utils/component/Dropdown/dropdown.css
+++ b/src/utils/component/Dropdown/dropdown.css
@@ -1,5 +1,4 @@
 .container {
-  width: 100%;
   flex: 1 1 0;
 }
 
@@ -9,8 +8,8 @@
 
 .list {
   position: absolute;
-  left: 0;
+  z-index: 5;
+  right: 0;
   top: 0;
-  width: 100%;
   height: 100%;
 }
