--- a/src/shared/Layout/Content/Card/CardMenu/cardmenu.css
+++ b/src/shared/Layout/Content/Card/CardMenu/cardmenu.css
@@ -5,15 +5,18 @@
 }
 
 .menuButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 31px;
   height: 31px;
   border: 0;
   border-radius: 50%;
   background: transparent;
-  background-image: url('menuBtn.svg');
-  background-position: center;
+  /* background-image: url('menuBtn.svg'); */
+  /* background-position: center;
   background-repeat: no-repeat;
-  background-size: 5px 20px;
+  background-size: 5px 20px; */
   transform: rotate(90deg);
 }
 
