--- a/src/shared/Layout/Header/SearchBlock/UserBlock/userblock.css
+++ b/src/shared/Layout/Header/SearchBlock/UserBlock/userblock.css
@@ -9,6 +9,7 @@
 .userAvatar {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -18,7 +19,10 @@
   transition: border-color .2s;
 }
 .avatarImg {
+  width: 30px;
+  height: 30px; 
   object-fit: cover;
+  border-radius: 50%;
 }
 
 .userName {
@@ -42,6 +46,11 @@
     width: 60px;
     height: 60px;    
     margin-right: 13px;
+  }
+
+  .avatarImg {
+    width: 50px;
+    height: 50px; 
   }
 
   .userName {
