--- a/src/shared/Layout/Common/Allert/alert.css
+++ b/src/shared/Layout/Common/Allert/alert.css
@@ -2,6 +2,7 @@
   position: fixed;
   top: 5%;
   left: 5%;
+  z-index: 50;
   max-width: 90%;
   padding: 10px;
   border: 1px solid var(--black);
@@ -9,6 +10,7 @@
   background-color: var(--grey_E5);
   font-size: 16px;
   line-height: 22px;
+  box-shadow: 0 0 8px var(--orange);
 }
 
 .alert__desc {
