--- a/src/shared/Layout/Modal/CommentForm/commentform.css
+++ b/src/shared/Layout/Modal/CommentForm/commentform.css
@@ -3,12 +3,23 @@
   flex-flow: column nowrap;
 }
 
+label {
+  display: flex;
+  flex-flow: column;
+}
+
 .commentForm__text {
   font-size: 16px;
   padding: 16px 18px;
   border: 1px solid var(--grey_D9);
   border-radius: 3px 3px 0px 0px;
   resize: none;
+  transition: border .2s, box-shadow .2s;
+}
+
+.commentForm__text[aria-invalid] {
+  border: 1px solid var(--orange);
+  box-shadow: 0 0 5px var(--orange);
 }
 
 .commentForm__btn {
