--- a/src/shared/Layout/Modal/CommentFormUncontrolled/commentformuncontrolled.css
+++ b/src/shared/Layout/Modal/CommentFormUncontrolled/commentformuncontrolled.css
@@ -11,6 +11,12 @@
   resize: none;
 }
 
+.commentFormAnswer__text[aria-invalid] {
+  border: 1px solid var(--orange);
+  box-shadow: 0 0 5px var(--orange);  
+  transition: border .2s, box-shadow .2s;
+}
+
 .commentFormAnswer__btn {
   padding: 16px 49px;
   border: 1px solid var(--orange);
