--- a/src/shared/Layout/Header/header.css
+++ b/src/shared/Layout/Header/header.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    margin: 0;
+    margin-bottom: 40px;
     padding: 40px 40px 0 40px;
   }
 }
